--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
 <h2>ユーザーの投稿一覧</h2>
 <% @user.posts.each do |t| %>
   <%= t.user.name %>
-  <%= t.body %>
+  <%= t.content %>
 <% end %>
 
 <%= link_to "Tweet一覧に戻る", posts_path %>
