--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,92 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+h1 {
+    font-family: 'Sacramento', cursive;
+    font-size: 60px;
+    background-color: #ffffff;
+    width: 440px;
+    height: 110px;
+    padding-left: 25px;
+    padding-top: 10px;
+    box-shadow: inset 0 0 10px 15px #8AB4F8;
+  }
+
+  .posts-link{
+    color:#ffffff;
+    text-decoration: none;
+    border: 2px solid #ffffff;
+    border-radius: 0;
+    background-image: -webkit-gradient(linear, left top, right top, from(#fa709a), to(#fee140));
+    background-image: -webkit-linear-gradient(left, #fa709a 0%, #fee140 100%);
+    background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
+    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
+    width: 200px;
+    height: 30px;
+    text-align:center;
+    padding:15px 0;
+    font-size: 20px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
+  }
+  
+  .posts-link:hover {
+    -webkit-transform: translate(0, -2px);
+    transform: translate(0, -2px);
+    color: #ffffff;
+    -webkit-box-shadow: 0 8px 15px rgba(0, 0, 0, .2);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, .2);
+  }
+    
+  body {
+    background-color:#8AB4F8
+  }
+
+  .btn,
+a.btn,
+button.btn {
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.5;
+  position: relative;
+  display: inline-block;
+  padding: 1rem 4rem;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  color: #212529;
+  border-radius: 0.5rem;
+}
+
+#bg-video{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  background: url('poster.jpg') no-repeat;
+  background-size: cover;
+ }
+ /* ----- 背景の上に表示させたいコンテンツ ----- */
+ .header-title{
+  position: relative; /*必ず必要*/
+  z-index: 2; /*必ず必要*/
+  display: flex;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  text-align:center;
+  margin: auto;
+ }
+
