--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,25 +1,31 @@
 <h1>Stubroadgram</h1>
 
+
 <input id="address" type="textbox" value="GeekSalon">
 <input type="button" value="Encode" onclick="codeAddress()">
 
-<h2>gmap</h2>
+<!-- 動画背景 -->
+<div class="wrap">
+ <!-- 背景用の動画ファイル -->
+ <video id="bg-video" src="video/airplane.mp4" poster="poster.jpg" autoplay loop></video>
+ <!-- 背景の上に表示させたいコンテンツ -->
+ <div class="header-title">
+ <p>
+ To infinity and beyond!!
+ </p>
+ </div>
+</div>
 
-
+<div class="posts-link">
+ <%= link_to "新規投稿ページへ", new_post_path %>
+</div>
 <h3>一覧ページ</h3>
+<h2>gmap</h2>
 <h3>投稿を検索</h3>
  <%= form_tag({controller:"posts",action:"index"}, method: :get) do %>
    <%= text_field_tag :search %>
    <%= submit_tag '検索する'  %>
-<% end %>
-<%= link_to "新規投稿へ", new_post_path %>
-<%= link_to "アメリカ", posts_america_path %>
-<%= link_to "カナダ", posts_canada_path %>
-<%= link_to "イギリス", posts_uk_path %>
-<%= link_to "オーストラリア", posts_aus_path
-<% if user_signed_in? %>
-  <%= link_to "マイページへ", user_path(current_user.id) %>
-<% end %>
+  <% end %>
 
 <div class="posts-container">
   <% @posts.each do |t| %>
@@ -31,9 +37,12 @@
       <%= t.country %>
       <%= t.city %>
       <%= t.school %>
-      <h2>gmap</h2>
-<div id='map'></div>
+  <% end %>
+</div>
 
+
+
+<div id='map'></div>
 
 <style>
 #map {
@@ -66,6 +75,7 @@
       let transitLayer = new google.maps.TransitLayer();
       transitLayer.setMap(map);
 
+//複数マーカー ここから
       <% @posts.each do |post|%>
         ( function() { 
           let markerLatLng = { lat: <%= post.lat %>, lng: <%= post.lng %> }; // 緯度経度のデータ作成
@@ -76,7 +86,7 @@
 //マーカーをクリックしたとき、詳細情報を表示
           let infowindow = new google.maps.InfoWindow({
             position: markerLatLng,
-            content: "<a href='<%= post_url(post.id) %>' target='_blank'><%= post.content %></a>"
+            content: "<a href='<%= post_url(post.id) %>' target='_blank'><%= post.city %></a>"
           }); //ここで詳細ページへのリンクを表示させる
           marker.addListener('click', function() {
             infowindow.open(map, marker);
@@ -88,45 +98,10 @@
   }
 </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=YOURAPIKEY&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDayWOD0E9pX6QwAhq8ewxVcLd-m0cJRMg&callback=initMap" async defer></script>
 
-
-<style>
-#map {
-  height: 600px;
-  width: 600px;
-}
-</style>
-
-<script>
-let map
-
-function initMap(){
-  geocoder = new google.maps.Geocoder()
-
-  map = new google.maps.Map(document.getElementById('map'), {
-    center: {lat: <%= t.lat %>, lng: <%= t.lng %>},
-    zoom: 12,
-  });
-
-  marker = new google.maps.Marker({
-    position:  {lat:<%= t.lat %>, lng:<%= t.lng %>},
-    map: map
-  });
-}
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAY9P2_Hnm6C5zcKj8Qia5V-nZC6SG9RSE&callback=initMap" async defer></script>
-      <%= link_to "詳細へ", post_path(t.id) %>
-      <% if user_signed_in? && current_user.id == t.user_id %>
-      <%= link_to "編集する", edit_user_registration_path(t.id) %>
-    <%= button_to "削除する", post_path(t.id), method: :delete %>
-    <% end %>
-    </div>
-  <% end %>
-
- 
-
- 
-</div>
-
-<%= link_to "Tweet一覧に戻る", posts_path %>
+<% if user_signed_in? %>
+<a href="" class="btn btn--circle"><i class="far fa-envelope"></i><br> 
+<%= button_to "ログアウト", destroy_user_session_path, method: :delete %>
+<i class="fas fa-angle-down fa-position-bottom"></i></a>
+<% end %>
