--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,8 @@
 <h1>Stubroadgram</h1>
 
 
-<input id="address" type="textbox" value="GeekSalon">
-<input type="button" value="Encode" onclick="codeAddress()">
 
-<!-- 動画背景 -->
-<div class="wrap">
- <!-- 背景用の動画ファイル -->
- <video id="bg-video" src="video/airplane.mp4" poster="poster.jpg" autoplay loop></video>
- <!-- 背景の上に表示させたいコンテンツ -->
+
  <div class="header-title">
  <p>
  To infinity and beyond!!
@@ -30,13 +24,13 @@
 <div class="posts-container">
   <% @posts.each do |t| %>
     <div class="post">
-    <%= link_to t.user.name, user_path(t.user.id) %>
-    <%= t.user.email %> 
-    <%= image_tag t.image_url, size: "250x200" if t.image? %>
+      <%= link_to t.user.name, user_path(t.user.id) %>
+      <%= image_tag t.image_url, size: "250x200" if t.image? %>
       <%= t.content %>
       <%= t.country %>
       <%= t.city %>
       <%= t.school %>
+    </div>
   <% end %>
 </div>
 
