--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -13,6 +13,31 @@ h1 {
     box-shadow: inset 0 0 10px 15px #8AB4F8;
   }
 
+  .header-title{
+    margin: 0;
+    
+    background-image:url("top.jpg");
+    background-repeat: no-repeat;
+    background-size:cover;
+    color: white;
+    font-size: 100px;
+    font-family:'Sawarabi Mincho', sans-serif;
+    text-shadow:1px 1px 0 black, -1px -1px 0 black,
+                -1px 1px 0 black, 1px -1px 0 black,
+                0px 1px 0 black,  0-1px 0 black,
+                -1px 0 0 black, 1px 0 0 black;
+  
+    z-index: 2; /*必ず必要*/
+    display: flex;
+    width: 100%;
+    height: 700px;
+    justify-content: center;
+    align-items: center;
+    text-align:center;
+    margin: auto;
+    box-shadow: inset 0 0 10px 15px #8AB4F8;
+   }
+  
   .posts-link{
     color:#ffffff;
     text-decoration: none;
@@ -28,6 +53,7 @@ h1 {
     padding:15px 0;
     font-size: 20px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
+    position: absolute;
   }
   
   .posts-link:hover {
@@ -36,6 +62,7 @@ h1 {
     color: #ffffff;
     -webkit-box-shadow: 0 8px 15px rgba(0, 0, 0, .2);
     box-shadow: 0 8px 15px rgba(0, 0, 0, .2);
+    position: absolute;
   }
     
   body {
@@ -66,27 +93,23 @@ button.btn {
   border-radius: 0.5rem;
 }
 
-#bg-video{
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: -100;
-  background: url('poster.jpg') no-repeat;
-  background-size: cover;
- }
- /* ----- 背景の上に表示させたいコンテンツ ----- */
- .header-title{
-  position: relative; /*必ず必要*/
-  z-index: 2; /*必ず必要*/
-  display: flex;
-  width: 50%;
-  justify-content: center;
-  align-items: center;
-  text-align:center;
-  margin: auto;
- }
-
+ 
+.posts-container{
+  background-color: #ffffff;
+  width: 80vw;
+  margin: 2em auto;
+padding: 1em;
+width: 100%;
+border: 3px dashed #000000;
+color: #000000;
+background-color: #fff;
+border-radius: 1px;
+}
+.posts-container p {
+    margin: 0; 
+    padding: 0;
+}
+.post{
+  margin: 5px;
+  border-bottom: solid;
+}
